# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank_intent"
version = "0.1.0"
requires-python = ">=3.10"
description = "ETL, zero-shot, and fine-tuning showcase using Banking77 dataset"
readme = "README.md"
authors = [
  { name = "klab", email = "karlprojekts@gmail.com" }
]

dependencies = [
  "transformers>=4.41.0",
  "datasets>=2.19.0",
  "peft>=0.11.0",
  "accelerate>=0.31.0",
  "scikit-learn>=1.4.0",
  "pydantic>=2.6.0",
  "typer[all]>=0.12.0",
  "mlflow>=2.12.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "gradio>=4.0.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
